adding images and making it my own

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,8 @@
     /* color-1(#f26522)
      * color-2(#035d5c)
      */
-    --color-1                      : hsla(19, 89%, 54%, 1);
+    /* --color-1                      : hsla(19, 89%, 54%, 1); */
+    --color-1                      : rgb(46, 114, 37);
     --color-2                      : hsla(179, 94%, 19%, 1);
 
     /* theme color variations
@@ -3387,7 +3388,7 @@ img.u-pull-left {
  * -------------------------------------------------------------------- */
 .s-intro__bg {
     display             : block;
-    background-image    : url(../images/hero-bg.jpg);
+    background-image    : url(../images/IMG_1118.JPG);
     background-repeat   : no-repeat;
     background-position : center;
     background-size     : cover;
