converted and shrunk images did privacy and terms pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,10 @@
     --border-radius                : 3px;
 }
 
+.terms-privacy {
+
+    margin: 10%;
+}
 /* ------------------------------------------------------------------- 
  * ## spacing and typescale
  * ------------------------------------------------------------------- */
