--- a/css/styles.css
+++ b/css/styles.css
@@ -1,89 +1,5 @@
 @charset "UTF-8";
-/* =================================================================== 
- * Mueller Main Stylesheet
- * Template Ver. 1.0.0
- * 06-21-2022
- * ------------------------------------------------------------------
- *
- * TOC:
- *
- * # SETTINGS
- *      ## fonts 
- *      ## colors
- *      ## spacing and typescale
- *      ## grid variables
- * # NORMALIZE
- * # BASE SETUP
- * # GRID
- *      ## large screen devices
- *      ## medium screen devices 
- *      ## tablet devices 
- *      ## mobile devices 
- *      ## small screen devices
- *      ## additional column stackpoints
- * # UTILITY CLASSES
- * # TYPOGRAPHY
- *      ## base type styles
- *      ## additional typography & helper classes
- *      ## lists
- *      ## spacing
- * # PRELOADER
- *      ## page loaded
- * # FORM
- *      ## style placeholder text
- *      ## change autocomplete styles in Chrome
- * # BUTTONS
- * # TABLE
- * # COMPONENTS
- *      ## pagination
- *      ## alert box 
- *      ## skillbars
- *      ## stats tabs
- * # PROJECT-WIDE SHARED STYLES
- *      ## theme-specific typography classes
- *      ## media classes
- *      ## section header
- *      ## list block
- *      ## swiper overrides
- * # PAGE WRAP
- * # SITE HEADER
- *      ## logo
- *      ## main navigation
- *      ## header social
- *      ## mobile menu toggle
- * # INTRO
- *      ## intro background
- *      ## intro content
- *      ## intro scroll down
- *      ## intro transitions
- * # ABOUT
- * # SERVICES
- * # PORTFOLIO
- *      ## bricks masonry 
- *      ## masonry entries 
- *      ## modal popup
- * # CLIENTS
- * # TESTIMONIALS
- *      ## testimonial slider 
- * # FOOTER
- *      ## contact btn
- *      ## subscription form
- *      ## footer social
- *      ## copyright
- *      ## go top
- *
- * ------------------------------------------------------------------ */
 
-
-/* ===================================================================
- * # SETTINGS
- *
- *
- * ------------------------------------------------------------------- */
-
-/* ------------------------------------------------------------------- 
- * ## fonts 
- * ------------------------------------------------------------------- */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Manrope:wght@500;600;700&display=swap");
 
 :root {
@@ -2864,7 +2780,7 @@ img.u-pull-left {
 }
 
 .section-header.light-on-dark .desc {
-    color : var(--color-gray-15);
+    color : var(--color-gray-9);
 }
 
 .section-header.light-on-dark::before {
@@ -4455,6 +4371,18 @@ img.u-pull-left {
  *
  *
  * ------------------------------------------------------------------- */
+ @media screen and (max-width: 570px) {
+    #footerText {
+        font-size: 24px; /* Shrink font size for smaller screens */
+    }
+}
+
+@media screen and (max-width: 390px) {
+    #footerText {
+        font-size: 20px; /* Shrink font size for smaller screens */
+    }
+}
+
 .s-footer {
     background-color : var(--color-gray-2);
     padding-top      : calc(5.5 * var(--space));
